fix: arrumar o z-index dos button

--- a/src/components/themes/table.module.scss
+++ b/src/components/themes/table.module.scss
@@ -180,6 +180,7 @@
     border-radius: 100%;
     cursor: pointer;
     display: flex;
+    z-index: 2;
     img{
         border-radius: 100%;
         width: 50px;
